--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Main.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Main.cshtml
@@ -47,7 +47,7 @@
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Services" class="nav-item nav-link  @(ViewBag.Title=="Services"?"active":"")">Services</a>
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Contact" class="nav-item nav-link  @(ViewBag.Title=="Contact"?"active":"")">Contact</a>
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Order" class="nav-item nav-link  @(ViewBag.Title=="Order"?"active":"")">Order</a>
-                <a asp-area="MainPages" asp-controller="Pages" asp-action="Booking" class="nav-item nav-link  @(ViewBag.Title=="Booking"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">Booking</a>
+                <a asp-area="MainPages" asp-controller="Pages" asp-action="Booking" class="nav-item nav-link  @(ViewBag.Title=="Booking"?"active":"")@(ViewBag.IsAdmin == "True" ? "d-none" : "")">Booking</a>
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Truck" class="nav-item nav-link  @(ViewBag.Title=="Truck"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">Truck</a>
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Driver" class="nav-item nav-link  @(ViewBag.Title=="Driver"?"active":"")@(ViewBag.IsAdmin == "False" ? "d-none" : "")">Driver</a>
                 <a asp-area="MainPages" asp-controller="Pages" asp-action="Logout" class="nav-item nav-link  @(ViewBag.Title=="Logout"?"active":"")">Logout</a>
