--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Truck.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Pages/Truck.cshtml
@@ -7,3 +7,50 @@
     Layout = "~/Areas/MainPages/Views/Pages/Main.cshtml";
 }
 <h1>Truck</h1>
+@model List<TruckTransportManegment.Areas.MainPages.Models.TruckModel>;
+<p>@ViewBag.Data</p>
+
+<a class="btn btn-outline-primary " asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="AddCountry">Add Country</a>
+<div class="container-fluid my-2">
+    <form class="d-flex w-50" asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="CountrySearch">
+        <input type="text" class="form-control me-2" placeholder="CountryName" name="CountryName">
+        <input type="text" class="form-control me-2" placeholder="CountryCode" name="CountryCode">
+        <button class="btn btn-success" type="submit" title="Search"><i class=" bi bi-search"></i></button>
+    </form>
+</div>
+
+<table class="table text-center table-striped">
+    <thead>
+        <tr class="">
+            <th scope="col">Country ID</th>
+            <th scope="col">Country Name</th>
+            <th scope="col">Country Code</th>
+            <th scope="col">Created</th>
+            <th scope="col">Modified</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var truck in Model)
+        {
+            <tr>
+                <th scope="row">@truck.TruckID</th>
+                <td>@truck.TruckName</td>
+                <td>@truck.TruckType</td>
+                <td>@truck.EngineNo</td>
+                <td>@truck.Modified</td>
+                <td>
+                    <form method="post" asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="AddCountry" asp-route-CountryID="@Convert.ToInt32(truck.TruckID)">
+                        <button type="submit" class="btn btn-outline-warning">Edit</button>
+                    </form>
+                </td>
+                <td>
+                    <form method="post" asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="DeleteCountry" asp-route-CountryID="@Convert.ToInt32(truck.TruckID)">
+                        <button type="submit" class="btn btn-outline-danger">Delete</button>
+                    </form>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
