--- a/Advance DOTNET/API_Create_Consume/API_Consume/API_Consume/Views/Home/Index.cshtml
+++ b/Advance DOTNET/API_Create_Consume/API_Consume/API_Consume/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-@model List<UserModel>
+@model  List<API_Consume.Models.UserModel>
 
 <h2>Employee List</h2>
 
