--- a/Advance DOTNET/API_Create_Consume/API_Consume/API_Consume/Views/Home/Index.cshtml
+++ b/Advance DOTNET/API_Create_Consume/API_Consume/API_Consume/Views/Home/Index.cshtml
@@ -29,6 +29,11 @@
                     <td>@emp.EmpID</td>
                     <td>@emp.EmpName</td>
                     <td>@emp.EmpCode</td>
+                    <td>
+                        <form method="post" asp-controller="Home" asp-action="DeleteData" asp-route-id="@emp.EmpID">
+                            <button type="submit" class="btn btn-outline-danger">Delete</button>
+                        </form>
+                    </td>
                     <!-- Add other columns as needed -->
                 </tr>
             }
