--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Truck/Truck.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Truck/Truck.cshtml
@@ -8,7 +8,7 @@
 }
 @model List<TruckTransportManegment.Areas.MainPages.Models.TruckModel>;
 <div class="container mt-5">
-    <a class="btn btn-outline-primary " asp-area="MainPages" asp-controller="Truck" asp-action="TruckAddEdit">Add Country</a>
+    <a class="btn btn-outline-primary " asp-area="MainPages" asp-controller="Truck" asp-action="TruckAddEdit">Add Truck</a>
 
 
     <table class="table text-center table-striped">
