--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Driver/Driver.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/Driver/Driver.cshtml
@@ -7,47 +7,51 @@
     Layout = "~/Areas/MainPages/Views/Pages/Main.cshtml";
 }
 @model List<TruckTransportManegment.Areas.MainPages.Models.DriverModel>;
+<!-- Main css -->
+<link rel="stylesheet" href="~/css/Cardcss.css">
+
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 <div class="container mt-5">
-    <a class="btn btn-outline-primary " asp-area="MainPages" asp-controller="Driver" asp-action="DriverAddEdit">Add Driver</a>
+    <a class="btn btn-outline-primary mb-3" asp-area="MainPages" asp-controller="Driver" asp-action="DriverAddEdit">Add Driver</a>
 
-
-    <table class="table text-center table-striped">
-        <thead>
-            <tr class="">
-                <th scope="col">Driver ID</th>
-                <th scope="col">Driver Name</th>
-                <th scope="col">Driver Number</th>
-                <th scope="col">Licence No</th>
-                <th scope="col">Licence Expiry Date</th>
-                <th scope="col">Created</th>
-                <th scope="col">Modified</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var Driver in Model)
+    <div class="container">
+        <div class="row">
+            @foreach (var driver in Model)
             {
-                <tr>
-                    <th scope="row">@Driver.DriverID</th>
-                    <td>@Driver.DriverName</td>
-                    <td>@Driver.DriverPhone</td>
-                    <td>@Driver.LicenceNo</td>
-                    <td>@Driver.LicenceExpiryDate</td>
-                    <td>@Driver.Created</td>
-                    <td>@Driver.Modified</td>
-                    <td>
-                        <form method="post" asp-area="MainPages" asp-controller="Driver" asp-action="DriverAddEdit" asp-route-DriverID="@Convert.ToInt32(Driver.DriverID)">
-                            <button type="submit" class="btn btn-outline-warning">Edit</button>
-                        </form>
-                    </td>
-                    <td>
-                        <form method="post" asp-area="MainPages" asp-controller="Driver" asp-action="DriverDelete" asp-route-DriverID="@Convert.ToInt32(Driver.DriverID)">
-                            <button type="submit" class="btn btn-outline-danger">Delete</button>
-                        </form>
-                    </td>
-                </tr>
+                <div class="col-md-6 col-xl-4">
+                    <div class="card radius-10 m-b-30 border-danger">
+                        <div class="card-body row">
+                            <div class="col-10 card-title align-self-center mb-0">
+                                <h5>@driver.DriverName</h5>
+                                <p class="m-0">@driver.DriverPhone</p>
+                            </div>
+                            <div class="col-2 d-flex justify-content-end">
+                                <div class=" btn-group btn-group-sm">
+                                    <form method="post" asp-area="MainPages" asp-controller="Driver" asp-action="DriverAddEdit" asp-route-DriverID="@Convert.ToInt32(driver.DriverID)">
+                                        <button type="submit" class="btn btn-warning tooltips " data-placement="top" data-toggle="tooltip"
+                                                data-original-title="Edit">
+                                            <i class="fa fa-pencil"></i>
+                                        </button>
+                                    </form>
+                                    <form method="post" asp-area="MainPages" asp-controller="Driver" asp-action="DriverDelete" asp-route-DriverID="@Convert.ToInt32(driver.DriverID)">
+                                        <button type="submit" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip"
+                                                data-original-title="Delete">
+                                            <i class="fa fa-times"></i>
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><i class="fa fa-id-card"></i> &nbsp;Licence No : @driver.LicenceNo</li>
+                            <li class="list-group-item"><i class="fa fa-calendar-times-o"></i> &nbsp;Licence ExpiryDate : @driver.LicenceExpiryDate</li>
+                            <li class="list-group-item"><i class="fa fa-calendar-plus-o"></i> &nbsp;Created : @driver.Created</li>
+                            <li class="list-group-item"><i class="fa fa-calendar-check-o"></i> &nbsp;Modified : @driver.Modified</li>
+                        </ul>
+                    </div>
+                </div>
             }
-        </tbody>
-    </table>
+        </div>
+    </div>
 </div>
