--- a/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/City/City.cshtml
+++ b/Advance DOTNET/TruckTransportManegment/TruckTransportManegment/Areas/MainPages/Views/City/City.cshtml
@@ -7,43 +7,51 @@
     Layout = "~/Areas/MainPages/Views/Pages/Main.cshtml";
 }
 @model List<TruckTransportManegment.Areas.MainPages.Models.CityModel>;
+<!-- Main css -->
+<link rel="stylesheet" href="~/css/Cardcss.css">
+
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 <div class="container mt-5">
-    <a class="btn btn-outline-primary " asp-area="MainPages" asp-controller="City" asp-action="CityAddEdit">Add City</a>
+    <a class="btn btn-outline-primary mb-3" asp-area="MainPages" asp-controller="City" asp-action="CityAddEdit">Add City</a>
 
 
-    <table class="table text-center table-striped">
-        <thead>
-            <tr class="">
-                <th scope="col">City ID</th>
-                <th scope="col">City Name</th>
-                <th scope="col">City Code</th>
-                <th scope="col">Created</th>
-                <th scope="col">Modified</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var City in Model)
+   
+    <div class="container">
+        <div class="row">
+            @foreach (var city in Model)
             {
-                <tr>
-                    <th scope="row">@City.CityID</th>
-                    <td>@City.CityName</td>
-                    <td>@City.CityCode</td>
-                    <td>@City.Created</td>
-                    <td>@City.Modified</td>
-                    <td>
-                        <form method="post" asp-area="MainPages" asp-controller="City" asp-action="CityAddEdit" asp-route-CityID="@Convert.ToInt32(City.CityID)">
-                            <button type="submit" class="btn btn-outline-warning">Edit</button>
-                        </form>
-                    </td>
-                    <td>
-                        <form method="post" asp-area="MainPages" asp-controller="City" asp-action="CityDelete" asp-route-CityID="@Convert.ToInt32(City.CityID)">
-                            <button type="submit" class="btn btn-outline-danger">Delete</button>
-                        </form>
-                    </td>
-                </tr>
+                <div class="col-md-6 col-xl-4">
+                    <div class="card radius-10 m-b-30 border-danger">
+                        <div class="card-body row">
+                            <div class="col-10 card-title align-self-center mb-0">
+                                <h5>@city.CityName</h5>
+                                <p class="m-0">@city.CityCode</p>
+                            </div>
+                            <div class="col-2 d-flex justify-content-end">
+                                <div class=" btn-group btn-group-sm">
+                                    <form method="post" asp-area="MainPages" asp-controller="City" asp-action="CityAddEdit" asp-route-CityID="@Convert.ToInt32(city.CityID)">
+                                        <button type="submit" class="btn btn-warning tooltips " data-placement="top" data-toggle="tooltip"
+                                                data-original-title="Edit">
+                                            <i class="fa fa-pencil"></i>
+                                        </button>
+                                    </form>
+                                    <form method="post" asp-area="MainPages" asp-controller="City" asp-action="CityDelete" asp-route-CityID="@Convert.ToInt32(city.CityID)">
+                                        <button type="submit" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip"
+                                                data-original-title="Delete">
+                                            <i class="fa fa-times"></i>
+                                        </button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><i class="fa fa-calendar-plus-o"></i> &nbsp;Created : @city.Created</li>
+                            <li class="list-group-item"><i class="fa fa-calendar-check-o"></i> &nbsp;Modified : @city.Modified</li>
+                        </ul>
+                    </div>
+                </div>
             }
-        </tbody>
-    </table>
+        </div>
+    </div>
 </div>
